// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen switches config import-export] should create the switches: the switches have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ switch => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen switches config import-export] should update the switches: the switches have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ switch => Environment/cfgObjectTest
Completed. 1 object(s) imported.
",
}
`;
